--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@slack/events-api": "^2.3.2",
     "@slack/interactive-messages": "^1.5.0",
     "@types/react-dom": "^16.9.6",
     "dotenv": "^8.2.0",
@@ -24,7 +25,7 @@
     "react-dom": "^16.13.1"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc  && cp ./src/index.html ./dist",
     "clean": "yarn rimraf dist",
     "prestart": "yarn build",
     "start": "node dist/server.js"
