--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "jsx": "react",
     "module": "commonjs",
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "target": "es6",
     "noImplicitAny": true,
     "moduleResolution": "node",
