--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-dom": "^16.13.1"
   },
   "scripts": {
-    "build": "tsc  && cp ./src/index.html ./dist",
+    "build": "tsc",
     "clean": "yarn rimraf dist",
     "prestart": "yarn build",
     "start": "node dist/server.js"
