--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "phelia-example",
   "version": "0.1.0",
   "engines": {
+    "node": "10.16.3",
     "yarn": "1.17.3"
   },
   "license": "MIT",
