--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-dom": "^16.13.1"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp ./src/index.html ./dist",
     "clean": "yarn rimraf dist",
     "prestart": "yarn build",
     "start": "node dist/server.js"
