--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "phelia-example",
-  "version": "0.1.0",
+  "name": "gimmie",
+  "version": "0.0.1",
   "engines": {
     "node": "10.16.3",
     "yarn": "1.17.3"
@@ -24,14 +24,16 @@
     "@types/react-dom": "^16.9.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "phelia": "^0.1.4",
+    "json-concat": "^0.0.1",
+    "jsonfile": "^6.0.1",
+    "npm-watch": "^0.6.0",
+    "phelia": "^0.1.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "scripts": {
-    "build": "tsc && cp ./src/index.html ./dist",
+    "build": "tsc -w",
     "clean": "yarn rimraf dist",
-    "prestart": "yarn build",
     "start": "node dist/server.js"
   }
 }
